# cma_hmm

./: BCPA.py  README.md  R_comparison.py  __init__.py  annotation.py  hybrid_annotation.py  models.py  move_apps_patch.py  movehmm_reference.R  plot.py  preprocessing.py  pyproject.toml  state_annotation.py  test_common_pipeline.py  tests.py  utils.py
tests/: tests.py  turtles.pickle
